Time: 21 ms (82%), Space: 50.9 MB (89.99%) - LeetHub