@@ -1,17 +1,17 @@
 class RecentCounter {
-    List<Integer> counter=new LinkedList<>();
+    Deque<Integer> counter = new ArrayDeque<>();
     public RecentCounter() {
     }
     
     public int ping(int t) {
         if(counter.isEmpty()){
-            counter.add(t);
+            counter.addLast(t);
             return 1;
         }
         counter.add(t);
         int l= t-3000;
-        while(counter.get(0)<l){
-            counter.remove(0);
+        while(counter.getFirst()<l){
+            counter.removeFirst();
         }
         return counter.size();
     }
